# TP_ATR

./: CMakeLists.txt  Dockerfile  Makefile  README.md  caminhao_1.csv  caminhao_2.csv  caminhao_3.csv  gui_mina  log_caminhoes.csv  log_sistema_mineracao.txt  main.cpp  run.sh  simulacao_backend  simulacao_mina  teste_final  teste_rota
include/: BufferCircular.hpp  Caminhao.hpp  FilaEventos.hpp  MqttInterface.hpp  SimulacaoMina.hpp  Tipos.hpp
include/caminhao/: caminhao.hpp  coletor_dados.hpp  contexto.hpp  controle_navegacao.hpp  interface_local.hpp  logica_comando.hpp  monitoramento_falhas.hpp  tratamento_sensores.hpp
include/core/: buffer.hpp  config.hpp  tipos.hpp
include/mqtt/: mqtt_client.hpp
include/rota/: planejamento_rota.hpp
src/: .gitignore  BufferCircular.cpp  Caminhao.cpp  FilaEventos.cpp  SimulacaoMina.cpp  main.cpp  main_gui.cpp
src/caminhao/: caminhao.cpp  coletor_dados.cpp  controle_navegacao.cpp  interface_local.cpp  logica_comando.cpp  monitoramento_falhas.cpp  tratamento_sensores.cpp
src/core/: buffer.cpp
src/mqtt/: mqtt_client.cpp
src/rota/: planejamento_rota.cpp
